# cmake_files

./: CMakeLists.txt  CompilerWarnings.cmake  CustomCommands.cmake  LICENSE  Policies.cmake  ProjectSettings.cmake  README.md
Configurations/: CMakeLists.txt  CompilerWarnings.cmake  ConfigCLR.cmake  ConfigClr.cmake  ConfigClrWin.cmake  ConfigDefault.cmake  ConfigDefaultWin.cmake  ConfigMinimal.cmake  Default.cmake  GlobalDefaults.cmake  README.md
Configurations/docs/: CompilerFlags.md  Config.md
Policies/: CMakeLists.txt  Policies.cmake  README.md
